# Geometrical_Optics_master

./: .gitattributes  .gitignore  .pre-commit-config.yaml  .zenodo.json  CITATION.cff  HTML_maker.py  LICENSE  README.md  disloc_identify.py  environment-dev.yml  environment-dtu-lock.yml  environment.yml  functions.py  image_processor.py  init_forward.py  plot_sample.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  notebooks.yml  publish.yml
configs/: default.toml  identification_multi.toml  identification_single.toml  identification_zscan.toml  profile_identify_multi.toml  profile_identify_single.toml  profile_identify_zscan.toml  profile_rocking.toml  profile_rocking_random.toml
configs/sweep/: random_ndis02_seed1.toml  random_ndis02_seed2.toml  random_ndis04_seed1.toml  random_ndis04_seed2.toml  random_ndis08_seed1.toml  random_ndis08_seed2.toml  random_ndis16_seed1.toml  random_ndis16_seed2.toml
configs/variants/: dis_0p25.toml  dis_0p5.toml  dis_1.toml  dis_2.toml  forward_strain_scan.toml  sample_remount_S2.toml
direct_space/: forward_model.py
docs/: architecture.md  cluster-profiling.md  cluster-runs.md  codebase-review-2026-05-handoff.md  crystal-structures.md  detector-noise-model.md  getting-started-dtu-cluster.md  getting-started-windows-laptop.md  gnb-walls.md  m4-validation-report.md  model-taxonomy.md  output-format.md  physics.md  publishing.md  recovery-plan-darkmod-vs-go.md  references.md  release-notes-1.0.0.md  release-notes-1.1.0.md  release-notes-1.2.0.md  release-notes-2.0.0.md  release-notes-2.0.1.md  release-notes-2.1.0.md  release-notes-2.1.1.md  release-notes-2.5.0.md  release-notes-2.5.1.md  release-notes-3.0.0.md  release-notes-3.0.1.md  reproducibility.md  resolution-backend-comparison.md  roadmap-2026-06-audit.md
docs/calibration/: analyze_darks.py  counts_scale_rocking_study_2026-06-16.md  derive_counts_scale.py  fit_gain.py  quick_floor_fit.py
docs/superpowers/context/: 2026-05-28-oblique-angle-execution-notes.md
docs/superpowers/notes/: 2026-05-27-find-hg-baseline.md  2026-06-20-gnb-spike-findings.md  2026-06-21-gnb-full-omega-forward-path.md
docs/superpowers/plans/: 2026-05-12-codebase-cleanup.md  2026-05-12-phase-9-2-postprocessing.md  2026-05-13-cdd-inc-beamstop-port.md  2026-05-14-dislocation-identification-port.md  2026-05-14-esrf-dtu-port.md  2026-05-14-purdue-paper-port.md  2026-05-15-cluster-integration.md  2026-05-16-kernel-pickle-to-npz.md  2026-05-17-hdf5-output-format-v1.1.md  2026-05-20-bootstrap-multi-reflection.md  2026-05-20-multi-reflection-lookup.md  2026-05-21-identification-hdf5-implementation.md  2026-05-21-scan-modes-crystal-layouts.md  2026-05-22-identification-two-dtheta-lift-implementation.md  2026-05-22-scan-two-dtheta-z-wiring-implementation.md  2026-05-23-default-config-flip-to-simple.md  2026-05-24-analytic-resolution.md  2026-05-26-forward-static-hoist.md  2026-05-26-self-sufficient-pip-install.md  2026-05-27-cluster-profiling.md  2026-05-27-find-hg-numba-fusion.md  2026-05-27-hdf5-float32-and-fanout.md  2026-05-28-oblique-angle-phase-a.md  2026-06-02-forward-context-refactor.md  2026-06-03-forward-context-slice5.md  2026-06-10-m1-phase2b-pool-fd-dedup-fusion.md  2026-06-10-m3-foundation-implementation.md  2026-06-11-m2-oblique-full-compat.md  2026-06-11-m3-orchestrator-implementation.md  2026-06-11-pipeline-split.md  2026-06-12-detector-noise-model.md  2026-06-12-m4-stage42-cif-ingestion.md  2026-06-12-m5-tutorial-notebooks.md  (+6 more)
examples/: .gitignore  01_quickstart.ipynb  02_reciprocal_space.ipynb  03_dislocations_and_contrast.ipynb  04_oblique_and_reflections.ipynb  05_identification_at_scale.ipynb  README.md
examples/cluster_showcase/: showcase.ipynb
examples/identification_ml_tutorial/: .gitignore  demo_multi.toml  dfxm_identify_ml_tutorial.ipynb
legacy/: README.md  init_forward.py  init_forward_purdue.py
locks/: README.md  environment-dtu-linux-64.yml
lsf/: fanout.bsub  forward_single.bsub  identify_array.bsub  identify_sweep_array.bsub  profile.bsub
packaging/conda/: FEEDSTOCK-RELEASE-3.0.0.md  README.md  recipe.yaml
reciprocal_space/: exposure_time.py  generate_Resq_i.py  recspace_res.py
reciprocal_space/pkl_files/: Resq_i_20230913_1308_vars.txt  Resq_i_20240913_1359_vars.txt
scripts/: compare_resolution_backends.py  fanout.py  gen_identify_sweep_configs.py  gen_sweep_configs.py  pre_release_gate.py  profile_find_hg.py  profile_forward.py  profile_identify.py  render_readme_examples.py  render_rocking_gif.py  render_structure_showcase.py  run_forward.py  run_identify_study.py  scaling_sweep.py  test_darfix_darling_open.py  validate_cross_machine.py
slurm/: forward_single.sbatch  identify_array.sbatch
src/dfxm_geo/: __init__.py  cli.py  config.py  constants.py  detector.py  fanout_worker.py  find_reflections_cmd.py  init_cmd.py  orchestrator.py  pipeline.py
src/dfxm_geo/io/: hdf5.py  (+6 more)
tests/: _gen_forward_legacy_golden.py  _gen_forward_snapshot_pickle_era.py  _gen_reciprocal_baseline.py  _gen_synthetic_kernel.py  _perf_static_hoist.py  conftest.py  test_analysis.py  test_analytic_backend_integration.py  test_analytic_resolution_eta_zero_bit_identical.py  test_apply_detector_model.py  test_bcc_e2e.py  test_benchmarks.py  test_bootstrap_multi_reflection.py  test_bprime_projection.py  test_burgers.py  test_ceramic_acceptance_al2o3.py  test_cif_loader.py  test_cluster_templates.py  test_config_cif.py  test_configs_load_under_new_schema.py  test_constants.py  test_crystal_mount_from_toml_cif.py  test_crystal_structure_config.py  test_cubic_bit_identity.py  test_custom_slip_system_e2e.py  test_darling_reader.py  test_defaults_simple.py  test_detector_config.py  test_detector_dtype_float32.py  test_detector_file.py  test_detector_geometry_config.py  test_detector_model.py  test_dislocations.py  test_dislocations_mixed.py  test_dislocations_no_debug_print.py  test_dislocations_smoke.py  test_elasticity.py  test_empty_toml_runs.py  test_environment_files.py  test_exposure_d0.py  (+153 more)
tests/reciprocal_space/: test_analytic_resolution.py
tools/: sweep_summary_identify.py
(+96 files in other folders)
