[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dfxm-geo"
version = "0.1.0"
description = "Geometrical-optics forward model for dark-field X-ray microscopy"
readme = "README.md"
requires-python = ">=3.11"
license = {file = "LICENSE"}
authors = [
    {name = "Sina Borgi", email = "borgi@dtu.dk"},
]
keywords = ["dfxm", "x-ray", "synchrotron", "dislocations", "materials-science"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
    "numpy>=1.23,<3",
    "scipy>=1.10,<2",
    "numba>=0.56",
    "matplotlib>=3.6",
    "seaborn>=0.12",
    "fabio>=2023.4",
    "joblib>=1.3",
    "tqdm>=4.64",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-cov>=4",
    "ruff>=0.6",
    "mypy>=1.10",
    "pre-commit>=3.7",
    "ipykernel",
    "jupyterlab",
]

[project.urls]
Homepage = "https://github.com/borgi-s/Geometrical_Optics_master"
Paper = "https://journals.iucr.org/j/issues/2024/02/00/nb5370/"

[tool.setuptools]
# Flat layout for now — keeps top-level functions.py, image_processor.py, init_forward.py importable.
# A future refactor (plan Phase 4) moves these into src/dfxm_geo/.
py-modules = ["functions", "image_processor", "init_forward"]
packages = ["direct_space", "reciprocal_space"]

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = ["legacy/", "notebooks/"]

[tool.ruff.lint]
# Lint is intentionally permissive while cleanup is in progress.
# Each "temporary" ignore is annotated with the plan phase that removes it.
select = ["E", "F", "W", "I", "B", "UP", "SIM", "RET", "NPY"]
ignore = [
    # Permanent — match research-code conventions
    "E501",   # line length handled by formatter
    "E741",   # single-letter physics names (l, I, O, b, ny) are conventional
    # Temporary — removed as cleanup phases land
    "F403",   # wildcard import (plan Phase 5: replace `import *`)
    "F405",   # name from wildcard (plan Phase 5)
    "F841",   # unused local (sweep in plan Phase 3.x)
    "E712",   # == True/False (sweep in plan Phase 3.x)
    "RET504", # unnecessary-assign (sweep in plan Phase 3.x)
    "B008",   # function-call-in-default-argument (review case-by-case)
    "NPY002", # legacy np.random (separate modernization phase)
    "SIM115", # file context manager (sweep in plan Phase 3.x)
    "UP030",  # format literals (sweep in plan Phase 3.x)
]

[tool.mypy]
python_version = "3.11"
strict_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
exclude = ["legacy/", "notebooks/", "tests/"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
