[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dfxm-geo"
version = "0.1.0"
description = "Geometrical-optics forward model for dark-field X-ray microscopy"
readme = "README.md"
requires-python = ">=3.11"
license = {file = "LICENSE"}
authors = [
    {name = "Sina Borgi", email = "borgi@dtu.dk"},
]
keywords = ["dfxm", "x-ray", "synchrotron", "dislocations", "materials-science"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
    "numpy>=1.23,<3",
    "scipy>=1.10,<2",
    "numba>=0.56",
    "matplotlib>=3.6",
    "seaborn>=0.12",
    "fabio>=2023.4",
    "joblib>=1.3",
    "tqdm>=4.66.3",  # CVE: CLI argument injection in <4.66.3
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-cov>=4",
    "pytest-benchmark>=4",
    "ruff>=0.6",
    "mypy>=1.10",
    "pre-commit>=3.7",
    "ipykernel",
    "jupyterlab",
]

[project.urls]
Homepage = "https://github.com/borgi-s/Geometrical_Optics_master"
Paper = "https://journals.iucr.org/j/issues/2024/02/00/nb5370/"

[project.scripts]
dfxm-forward = "dfxm_geo.pipeline:cli_main"

[tool.setuptools]
# Transitional layout during Phase 4 cleanup. Both the new src/dfxm_geo/
# package and the legacy flat modules ship together; legacy paths will
# become deprecation shims that re-export from dfxm_geo.* until Phase 5.3
# removes them.
py-modules = ["functions", "image_processor"]
packages = [
    "direct_space",
    "reciprocal_space",
    "dfxm_geo",
    "dfxm_geo.analysis",
    "dfxm_geo.crystal",
    "dfxm_geo.direct_space",
    "dfxm_geo.io",
    "dfxm_geo.reciprocal_space",
    "dfxm_geo.viz",
]

[tool.setuptools.package-dir]
"dfxm_geo" = "src/dfxm_geo"

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = ["legacy/", "notebooks/"]

[tool.ruff.lint]
# Lint is intentionally permissive while cleanup is in progress.
# Each "temporary" ignore is annotated with the plan phase that removes it.
select = ["E", "F", "W", "I", "B", "UP", "SIM", "RET", "NPY"]
ignore = [
    # Permanent — match research-code conventions
    "E501",   # line length handled by formatter
    "E741",   # single-letter physics names (l, I, O, b, ny) are conventional
]

[tool.mypy]
python_version = "3.11"
strict_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
exclude = ["legacy/", "notebooks/", "tests/"]

# Third-party libraries without inline type info or sibling stub packages.
# We don't try to type-check their internals; they pass through as Any.
[[tool.mypy.overrides]]
module = [
    "numba",
    "tqdm.*",
    "fabio",
    "fabio.*",
    "joblib",
    "scipy",
    "scipy.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers -m 'not bench'"
markers = [
    "bench: performance benchmarks (run with `pytest -m bench`); skipped by default",
]
