[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dfxm-geo"
version = "2.5.0"
description = "Geometrical-optics forward model for dark-field X-ray microscopy"
readme = "README.md"
requires-python = ">=3.11"
license = {file = "LICENSE"}
authors = [
    {name = "Sina Borgi", email = "borgi@dtu.dk"},
]
keywords = ["dfxm", "x-ray", "synchrotron", "dislocations", "materials-science"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Image Processing",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Visualization",
]
dependencies = [
    "numpy>=1.23,<3",
    "scipy>=1.10,<2",
    "numba>=0.56",
    "matplotlib>=3.6",
    "seaborn>=0.12",
    "fabio>=2023.4",
    "h5py>=3.0",
    "joblib>=1.3",
    "tqdm>=4.66.3",  # CVE: CLI argument injection in <4.66.3
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-cov>=4",
    "pytest-benchmark>=4",
    "ruff>=0.6",
    "mypy>=1.10",
    "pre-commit>=3.7",
    "ipykernel",
    "jupyterlab",
]
beamstop-wire = [
    "xraylib>=4.1",
]
memory-aware = [
    "psutil>=5",
]
identification = [
    "plotly>=5",
]

[project.urls]
Homepage = "https://github.com/borgi-s/Geometrical_Optics_master"
Repository = "https://github.com/borgi-s/Geometrical_Optics_master"
Issues = "https://github.com/borgi-s/Geometrical_Optics_master/issues"
Documentation = "https://github.com/borgi-s/Geometrical_Optics_master/tree/main/docs"
Changelog = "https://github.com/borgi-s/Geometrical_Optics_master/releases"
Paper = "https://journals.iucr.org/j/issues/2024/02/00/nb5370/"

[project.scripts]
dfxm-forward = "dfxm_geo.pipeline:cli_main"
dfxm-identify = "dfxm_geo.pipeline:cli_main_identify"
dfxm-bootstrap = "dfxm_geo.reciprocal_space.kernel:cli_main"
dfxm-init = "dfxm_geo.init_cmd:cli_main"
dfxm-migrate-output = "dfxm_geo.io.migrate:cli_main_npy_to_h5"
dfxm-migrate-h5 = "dfxm_geo.io.migrate:cli_main_h5_to_h5"

[tool.setuptools]
packages = [
    "dfxm_geo",
    "dfxm_geo.analysis",
    "dfxm_geo.crystal",
    "dfxm_geo.data",
    "dfxm_geo.direct_space",
    "dfxm_geo.io",
    "dfxm_geo.reciprocal_space",
    "dfxm_geo.viz",
]

[tool.setuptools.package-data]
"dfxm_geo.data" = ["configs/*.toml", "configs/variants/*.toml"]

[tool.setuptools.package-dir]
"dfxm_geo" = "src/dfxm_geo"

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = ["legacy/", "notebooks/", "tmp/"]

[tool.ruff.lint]
# Lint is intentionally permissive while cleanup is in progress.
# Each "temporary" ignore is annotated with the plan phase that removes it.
select = ["E", "F", "W", "I", "B", "UP", "SIM", "RET", "NPY"]
ignore = [
    # Permanent — match research-code conventions
    "E501",   # line length handled by formatter
    "E741",   # single-letter physics names (l, I, O, b, ny) are conventional
]

[tool.mypy]
python_version = "3.11"
strict_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
exclude = ["legacy/", "notebooks/", "tests/"]

# Third-party libraries without inline type info or sibling stub packages.
# We don't try to type-check their internals; they pass through as Any.
[[tool.mypy.overrides]]
module = [
    "numba",
    "tqdm.*",
    "fabio",
    "fabio.*",
    "joblib",
    "scipy",
    "scipy.*",
    "xraylib",
    "psutil",
    "plotly.*",
    "mpl_toolkits.*",
    "h5py",
    "h5py.*",
    "darfix.*",
    "darling",
    "darling.*",
    "silx.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers -m 'not bench and not slow'"
markers = [
    "bench: performance benchmarks (run with `pytest -m bench`); skipped by default",
    "slow: slow integration tests >~1 min wall-clock (run with `pytest -m slow`); skipped by default",
]
